# egon

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: PackageRelease.yml  PackageTest.yml  Release.yml  Tests.yml
docs/: _index.md  connectors.md  exceptions.md  multiprocessing.md  nodes.md  pipelines.md
egon/: __init__.py  connectors.py  exceptions.py  multiprocessing.py  nodes.py  pipeline.py  pipelines.py
tests/: utils.py
tests/functional_tests/: test_etl_pipeline.py  test_even_odd_pipeline.py
tests/test_connectors/: test_BaseConnector.py  test_InputConnector.py  test_OutputConnector.py
tests/test_multiprocessing/: test_MultiprocessingEngine.py
tests/test_nodes/: _dummy_nodes.py  test_Node.py
tests/test_pipeline/: test_Pipeline.py
