[tool.poetry]
name = "egon"
version = "0.0.0"  # Version is set automatically via CI
authors = ["Daniel Perrefort", ]
description = "A Python parallelization framework for easily building powerful data analysis networks."
readme = "README.md"
repository = "https://github.com/Egon-Framework/egon"
keywords = ["parallel", "multiprocessing", "pipeline", "network", "framework"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
