[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "egon"
version = "0.0.0"  # Version is set automatically via CI
authors = ["Daniel Perrefort", ]
description = "A Python parallelization framework for easily building powerful data analysis networks."
readme = "README.md"
repository = "https://github.com/Egon-Framework/egon"
keywords = ["egon", "egon-framework", "parallel", "multiprocessing"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.3"
